--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.16.7",
     "@stripe/stripe-js": "^4.3.0",
     "next": "^14.2.5",
     "openai": "^4.55.7",
