--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.0.28",
+    "@clerk/nextjs": "^5.3.2",
     "@clerk/themes": "^2.1.20",
     "@mui/icons-material": "^5.16.7",
     "@stripe/stripe-js": "^4.3.0",
