--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/themes": "^2.1.20",
     "@mui/icons-material": "^5.16.7",
     "@stripe/stripe-js": "^4.3.0",
+    "firebase": "^10.13.0",
     "next": "^14.2.6",
     "openai": "^4.55.7",
     "react": "^18",
