--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@clerk/clerk-sdk-node": "^5.0.28",
     "@clerk/nextjs": "^5.3.2",
     "@clerk/themes": "^2.1.20",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.7",
     "@stripe/stripe-js": "^4.3.0",
     "firebase": "^10.13.0",
