--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "firebase": "^10.13.0",
     "next": "^14.2.6",
     "openai": "^4.55.7",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "stripe": "^16.7.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "url-loader": "^4.1.1"
   }
 }
