--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
     "@stripe/stripe-js": "^4.3.0",
     "firebase": "^10.13.0",
     "next": "^14.2.6",
